# demo_aocs_control_model

./: CMakeLists.txt  README.md
include/: pd_controller.hpp
include/demo_aocs_control_model/: L_p_func.h  iss_dynamics.hpp  pd_controller.hpp
scripts/: #ss_model.py#  ss_data.csv  ss_model.py  vis_data.py
src/: L_p_func.cpp  iss_dynamics.cpp  main.cpp  pd_controller.cpp
